# extern_traces

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE  Pipfile  README.md  flake.nix  patch_self.py  pyproject.toml  rust-toolchain.toml
.github/workflows/: extern_traces_plugin.yml  extern_traces_viewer.yml  plugin.yml  viewer.yml
goldhen_plugins/: .gitignore
goldhen_plugins/.devcontainer/: devcontainer.json
goldhen_plugins/common/: plugin_common.c
goldhen_plugins/plugin_src/debug_wait/: Makefile
goldhen_plugins/plugin_src/debug_wait/source/: main.c
goldhen_plugins/plugin_src/extern_traces/: Makefile  README.md  make_trampolines.py  server.py
goldhen_plugins/plugin_src/extern_traces/source/: args.h  codegen.py  hook.h  logger.c  logger.h  logging.c  logging.h  main.c  thread_local_storage.c  thread_local_storage.h  time.h  tracing.c  tracing.h
goldhen_plugins/plugin_src/patch_resolver/: Makefile
goldhen_plugins/plugin_src/patch_resolver/source/: main.c
